# ai_donor_analytics_platform

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  logging.py  main.py  models.py  security.py  tools.py
app/api/: routes.py
app/db/: queries.py
app/mcp/: server.py
app/rag/: generator.py  index.py  retrieval.py
db/: init.sql
dbt_project/models/: donor_metrics.sql
mcp/: client_test.py
scripts/: smoke_api.py
tests/: conftest.py  manual_mcp_test.py  manual_test.py  test_api.py  test_db_contract.py  test_mcp_tools.py  test_rag.py  test_tools.py
